# essence

./: .gitignore  .mcp.json.example  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
.claude/skills/: benchmark.md  dev.md  init.md  understand.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile
backend/benches/: dns_cache.rs  extraction.rs  markdown_conversion.rs  prioritization.rs
backend/fixtures/test/: article.html  ecommerce.html  robots.txt  simple.html  with_ads.html
backend/src/: config.rs  error.rs  lib.rs  main.rs  mcp.rs  types.rs  validation.rs
backend/src/api/: batch.rs  crawl.rs  extract.rs  llmstxt.rs  map.rs  mod.rs  scrape.rs  search.rs
backend/src/cache/: mod.rs
backend/src/crawler/: config.rs  crawler.rs  dedup.rs  filter.rs  mapper.rs  mod.rs  pagination.rs  parallel.rs  prioritizer.rs  rate_limiter.rs  sitemap.rs  streaming.rs  url_normalization.rs
backend/src/engines/: browser.rs  detection.rs  http.rs  mod.rs  racer.rs  stealth.js  stealth.rs
backend/src/format/: advanced_extraction.rs  extract.rs  image_processing.rs  llm_extract.rs  markdown.rs  metadata.rs  mod.rs
backend/src/jobs/: mod.rs  store.rs  webhook.rs
backend/src/rate_limit/: mod.rs
backend/src/search/: mod.rs
backend/src/utils/: dns_cache.rs  etld.rs  mod.rs  retry.rs  robots.rs  robots_enhanced.rs  ssrf_protection.rs  url_rewrites.rs  user_agents.rs
backend/tests/: async_crawl.rs  batch_scrape.rs  benchmark.rs  benchmark_suite.rs  browser_engine_tests.rs  cache_integration.rs  circuit_breaker_integration.rs  competitive_benchmark.rs  crawler_bounds_tests.rs  dns_cache_integration.rs  engine_parity.rs  integration.rs  memory_bounds_integration.rs  quality_loop.rs  retry_integration.rs  scrape.rs  streaming_crawl_tests.rs  test_markdown_cleaning.rs  tests.json  verification.rs  webhook.rs
backend/tests/api/: crawl_test.rs  metrics.rs  mod.rs  scrape_test.rs
backend/tests/benchmark/: dashboard.rs  db.rs  llm_judge.rs  mod.rs
backend/tests/common/: mod.rs
backend/tests/fixtures/: article.html  retry_scenarios.json  simple.html
backend/tests/test_modules/: caching.rs  circuit_breaker.rs  database.rs  mod.rs  scraping.rs
docs/: BENCHMARKS.md  WEBSITE_COPY.md
