[package]
name = "essence-engine"
version = "0.1.0"
edition = "2021"
description = "A fast web retrieval engine with HTTP-to-browser fallback, producing LLM-ready Markdown"
license = "MIT"
repository = "https://github.com/ruchit-p/essence"
homepage = "https://essence.foundation"
readme = "../README.md"
authors = ["Ruchit Patel"]
keywords = ["web-scraping", "markdown", "browser-automation", "mcp", "llm"]
categories = ["web-programming::http-client", "command-line-utilities"]
exclude = ["vendor/*", "tests/*", "fixtures/*", "benches/*", ".env*"]

[[bin]]
name = "essence"
path = "src/main.rs"

[lib]
name = "essence"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "limit"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Content hashing for deduplication
blake3 = "1.5"

# Rate limiting
governor = "0.8"

# HTTP client & scraping
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "cookies"] }
scraper = "0.22"
html5ever = "0.29"

# DNS caching for improved latency
hickory-resolver = "0.24"
lru = "0.12"

# HTML to Markdown
html2md = "0.2"

# Content extraction
readability = { version = "0.3", default-features = false }
whatlang = "0.16"

# Utilities
base64 = "0.22"
image = "0.25"
url = "2"

# Browser automation
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Robots.txt parsing
robotstxt = "0.3"

# Glob pattern matching
glob-match = "0.2"

# Regex for sitemap parsing
regex = "1"

# Charset detection for international content
encoding_rs = "0.8"

# URL encoding
percent-encoding = "2"

# Environment configuration
dotenvy = "0.15"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Retry logic with exponential backoff
tokio-retry = "0.3"
backoff = { version = "0.4", features = ["tokio"] }

# Smart caching
moka = { version = "0.12", features = ["future"] }

# Public Suffix List for eTLD+1 extraction (domain grouping)
psl = "2"

# Utilities
once_cell = "1.19"
lazy_static = "1.4"

# Parallel processing
num_cpus = "1.16"

# Random number generation for user agent rotation
rand = "0.8"

# MCP server (Model Context Protocol)
rmcp = { version = "0.15", features = ["server", "transport-streamable-http-server"] }
schemars = "1.0"

[dev-dependencies]
mockito = "1"
wiremock = "0.6"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tokio-test = "0.4"
serial_test = "3"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }

# Benchmarks (temporarily disabled for Docker build)
# [[bench]]
# name = "markdown_conversion"
# harness = false
